ensure menu spacing is correct when header is pinned

--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -31,6 +31,10 @@
         @include media-query(large) {
             padding-top: ($gutter * 9.5);
             max-height: 900px;
+
+            .headroom--pinned.headroom--not-top & {
+                padding-top: ($gutter * 8);
+            }
         }
     }
 
